--- a/DSSportCompetitionSys/DSSportCompetitionSys.csproj
+++ b/DSSportCompetitionSys/DSSportCompetitionSys.csproj
@@ -52,6 +52,15 @@
       <HintPath>..\packages\NPOI.2.4.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="Spire.License, Version=1.3.7.40, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
+      <HintPath>packages\FreeSpire.XLS.9.10.11\lib\net40\Spire.License.dll</HintPath>
+    </Reference>
+    <Reference Include="Spire.Pdf, Version=5.10.8.2040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <HintPath>packages\FreeSpire.XLS.9.10.11\lib\net40\Spire.Pdf.dll</HintPath>
+    </Reference>
+    <Reference Include="Spire.XLS, Version=9.10.11.61040, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <HintPath>packages\FreeSpire.XLS.9.10.11\lib\net40\Spire.XLS.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -67,6 +76,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\PersonInfo.cs" />
+    <Compile Include="MatchPersonInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatchPersonInfoForm.Designer.cs">
+      <DependentUpon>MatchPersonInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ImportPersonInfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +97,9 @@
     <Compile Include="NPOIHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MatchPersonInfoForm.resx">
+      <DependentUpon>MatchPersonInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ImportPersonInfoForm.resx">
       <DependentUpon>ImportPersonInfoForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +125,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Template\64Template.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Template\8Template.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pic\Navigation.jpg">
