--- a/DSSportCompetitionSys/packages.config
+++ b/DSSportCompetitionSys/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EPPlus" version="4.5.3.2" targetFramework="net40" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net40" />
+  <package id="FreeSpire.XLS" version="9.10.11" targetFramework="net40" />
   <package id="NPOI" version="2.4.1" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
