--- a/DSSportCompetitionSys/DSSportCompetitionSys.csproj
+++ b/DSSportCompetitionSys/DSSportCompetitionSys.csproj
@@ -94,7 +94,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="NPOIHelper.cs" />
+    <Compile Include="NPOIHelperFor32.cs" />
+    <Compile Include="NPOIHelperFor64.cs" />
+    <Compile Include="NPOIHelperFor8.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MatchPersonInfoForm.resx">
@@ -125,6 +127,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Template\32Template.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Template\64Template.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
