--- a/DSSportCompetitionSys/DSSportCompetitionSys.csproj
+++ b/DSSportCompetitionSys/DSSportCompetitionSys.csproj
@@ -39,17 +39,17 @@
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="NPOI, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\NPOI.2.4.1\lib\net40\NPOI.dll</HintPath>
+    <Reference Include="NPOI">
+      <HintPath>packages\NPOI.2.4.1\lib\net40\NPOI.dll</HintPath>
     </Reference>
-    <Reference Include="NPOI.OOXML, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\NPOI.2.4.1\lib\net40\NPOI.OOXML.dll</HintPath>
+    <Reference Include="NPOI.OOXML">
+      <HintPath>packages\NPOI.2.4.1\lib\net40\NPOI.OOXML.dll</HintPath>
     </Reference>
-    <Reference Include="NPOI.OpenXml4Net, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\NPOI.2.4.1\lib\net40\NPOI.OpenXml4Net.dll</HintPath>
+    <Reference Include="NPOI.OpenXml4Net">
+      <HintPath>packages\NPOI.2.4.1\lib\net40\NPOI.OpenXml4Net.dll</HintPath>
     </Reference>
-    <Reference Include="NPOI.OpenXmlFormats, Version=2.4.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
-      <HintPath>..\packages\NPOI.2.4.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
+    <Reference Include="NPOI.OpenXmlFormats">
+      <HintPath>packages\NPOI.2.4.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="Spire.License, Version=1.3.7.40, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
@@ -75,7 +75,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\PersonInfo.cs" />
+    <Compile Include="AutoSizeFormClass.cs" />
+    <Compile Include="Entity\PersonInfoEntity.cs" />
+    <Compile Include="Entity\ProjectInfoEntity.cs" />
+    <Compile Include="GroupsManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GroupsManage.Designer.cs">
+      <DependentUpon>GroupsManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="MatchPersonInfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,8 +105,29 @@
     <Compile Include="NPOIHelperFor32.cs" />
     <Compile Include="NPOIHelperFor64.cs" />
     <Compile Include="NPOIHelperFor8.cs" />
+    <Compile Include="Password.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Password.Designer.cs">
+      <DependentUpon>Password.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProjectInfo.Designer.cs">
+      <DependentUpon>ProjectInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetScore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetScore.Designer.cs">
+      <DependentUpon>SetScore.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="GroupsManage.resx">
+      <DependentUpon>GroupsManage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MatchPersonInfoForm.resx">
       <DependentUpon>MatchPersonInfoForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +136,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Password.resx">
+      <DependentUpon>Password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProjectInfo.resx">
+      <DependentUpon>ProjectInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -117,6 +152,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SetScore.resx">
+      <DependentUpon>SetScore.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
